<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_fare"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_bg__home_ek2_shape"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_btn10"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:backgroundTint="@color/white"
                tools:ignore="SpeakableTextPresentCheck,VisualLintOverlap,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="Fare Calculator"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="33dp"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="normal|bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:weightSum="4"
            android:background="@drawable/rectangle_9_shape">


            <AutoCompleteTextView
                android:id="@+id/actv1_calc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="80dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:hint="@string/enter_start_station"
                tools:ignore="TouchTargetSizeCheck" />

            <AutoCompleteTextView
                android:id="@+id/actv2_calc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="50dp"
                android:hint="@string/enter_end_station"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:text="@string/calculate_fare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_calc"
                android:background="@drawable/show_route_and_fare_button"
                android:elevation="10dp"
                android:radius="30dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/white"
                android:textStyle="normal|bold"
                tools:ignore="TextSizeCheck,TextContrastCheck" />


            <Button
                android:text="@string/reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reset_calc"
                android:background="@drawable/show_route_and_fare_button"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/white"
                android:textStyle="normal|bold"
                android:elevation="10dp"
                android:radius="30dp"
                tools:ignore="TextSizeCheck,TextContrastCheck" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/fareText"
                android:layout_marginTop="100dp"
                android:textAlignment="center"
                android:textStyle="bold|normal"
                android:elevation="10dp"
                android:textSize="22sp"
                android:textColor="@color/fare_color"
                app:layout_constraintStart_toStartOf="@id/reset_calc"/>


        </LinearLayout>
    </LinearLayout>


</RelativeLayout>